ASSERT(gestureRecognizer == _doubleTapGestureRecognizer) in _doubleTapDidFail: https://bugs.webkit.org/show_bug.cgi?id=195857 <rdar://problem/48954679>

Reviewed by Wenson Hsieh.

Reset an existing gesture recognizer before creating a new one.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _createAndConfigureDoubleTapGestureRecognizer]):
(-[WKContentView _setDoubleTapGesturesEnabled:]):

Canonical link: https://commits.webkit.org/210130@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243047 268f45cc-cd09-0410-ab3c-d52691b4dbfc